@@ -220,6 +220,8 @@ dependencies {
 	compileOnly "com.builtbroken:Mffs:1.7.10-4.0.0b160:deobf"
 	compileOnly "com.builtbroken:MilitaryBaseDecor:1.7.10-0.1.0b203:deobf"
 	compileOnly "com.builtbroken:VoltzEngine:1.7.10-1.11.0b466:deobf"
+	compileOnly "net.sengir.forestry:forestry_1.7.10:4.2.16.64:dev"
+	compileOnly "binnie:binnie-mods:1.7.10-2.0.22:dev"
 
 	// List of potentially useful mods that may or may not be linked in here:
 	//compileOnly "appeng:appliedenergistics2:rv3-beta-6:dev"
